@@ -1,5 +1,5 @@
 /* Implementation of gamma function according to ISO C.
-   Copyright (C) 1997, 1999, 2001 Free Software Foundation, Inc.
+   Copyright (C) 1997, 1999, 2001, 2003 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@cygnus.com>, 1997.
 
@@ -45,8 +45,11 @@ __ieee754_gammal_r (long double x, int *signgamp)
       return x - x;
     }
   if ((es & 0x7fff) == 0x7fff && ((hx & 0x7fffffff) | lx) != 0)
-    /* NaN, return it.  */
-    return x;
+    {
+      /* NaN, return it.  */
+      *signgamp = 0;
+      return x;
+    }
   if ((es & 0x8000) != 0 && x < 0xffffffff && __rintl (x) == x)
     {
       /* Return value for integer x < 0 is NaN with invalid exception.  */
